--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "express": "^4.18.2",
     "mongoose": "^7.5.1",
     "node-cron": "^3.0.2",
-    "node-telegram-bot-api": "^0.61.0",
+    
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=14.20.1"
   }
 }
